# Procon27

./: .gitignore  README.md
solver/: CMakeLists.txt
solver/cmake/modules/: FindTBB.cmake
solver/exe/: ArrayFireTest.cpp  CMakeLists.txt  Deproyment.cpp  LimitedSearch.cpp  SequenceSearch.cpp  SuspendSearch.cpp  TBB_test.cpp  capture_test.cpp  graph.cpp  hello.cpp  logical.cpp  master.cpp  matrix.cpp  opencv_test.cpp  prototype.cpp  search.cpp  serch.cpp
solver/modules/: CMakeLists.txt
solver/modules/capture/: CMakeLists.txt
solver/modules/capture/include/capture/: CaptureIO.h  MatIO.h
solver/modules/capture/src/: CaptureIO.cpp  MatIO.cpp
solver/modules/search/: CMakeLists.txt
solver/modules/search/include/: Searcher.h
solver/modules/search/include/search/: AreaHeuristic.h  BasicSearch.h  BeamSearch.h  Deproyment.h  Heuristic.hpp  InstantViewer.h  LengthHeuristic.h  LengthHeuristic.hpp  LimitedSearch.h  NarrowHeuristic.h  Searcher.h  SequenceSearch.h  SuspendSearch.h  WeightComposite.h
solver/modules/search/src/: AreaHeuristic.cpp  BasicSearch.cpp  BeamSearch.cpp  Deproyment.cpp  InstantViewer.cpp  LengthHeuristic.cpp  LimitedSearch.cpp  NarrowHeuristic.cpp  SequenceSearch.cpp  SuspendSearch.cpp  WeightComposite.cpp
solver/modules/structure/: CMakeLists.txt
solver/modules/structure/include/structure/: Algorithm.h  Drawer.h  Matrix.h  Matrix.hpp  Point.h  Point.hpp  Polygon.h  Problem.h  ProblemMaker.h  Range.h
solver/modules/structure/src/: Algorithm.cpp  Drawer.cpp  Matrix.cpp  Polygon.cpp  Porblem.cpp  ProblemMaker.cpp
solver/modules/util/: CMakeLists.txt  ClockWiseFor.h
solver/modules/util/include/util/: BinaryIO.hpp  ClockWiseFor.h  Console.h  NearlyEqual.h  Printable.h  Timer.h
solver/modules/util/src/: Console.cpp  Printable.cpp  Timer.cpp
